# glm

./: CLAUDE.md  Cargo.toml  TESTING.md  spec.md
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: config.yml
.github/agents/: copilot-instructions.md
.github/workflows/: copilot-review.yml  release.yml  testing.yml
docs/: design.md
specs/001-repo-scoped-issues/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-repo-scoped-issues/checklists/: requirements.md
specs/001-repo-scoped-issues/contracts/: api-contract.md  ui-contract.md
src/: app.rs  config.rs  gh.rs  main.rs  models.rs  ui.rs
src/models/: mod.rs  repository.rs
