[package]
name = "ghlm"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
octocrab = "0.38"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
directories = "6.0.0"
serde_json = "1.0.149"
